Finished the project.

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,41 @@ compile_commands.json
 CTestTestfile.cmake
 _deps
 build
+/.idea/.name
+/cmake-build-debug/.ninja_deps
+/cmake-build-debug/.ninja_log
+/cmake-build-debug/build.ninja
+/cmake-build-debug/.cmake/api/v1/query/cache-v2
+/cmake-build-debug/.cmake/api/v1/reply/cache-v2-2ea3448071ff180f6894.json
+/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1
+/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-dc552d372bd036047bdc.json
+/cmake-build-debug/.cmake/api/v1/query/codemodel-v2
+/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-5adcba7184d52edef2cb.json
+/.idea/coms440.iml
+/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-f5ebdc15457944623624.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-Documentation-Debug-76ede730f5b4a3aa440b.json
+/cmake-build-debug/.cmake/api/v1/reply/directory-Source-Debug-eacbe9370dac00d92cd9.json
+/cmake-build-debug/.cmake/api/v1/reply/index-2022-01-29T00-48-25-0211.json
+/.idea/misc.xml
+/.idea/modules.xml
+/cmake-build-debug/Source/mycc
+/cmake-build-debug/Source/output.txt
+/cmake-build-debug/.cmake/api/v1/reply/target-_developers-Debug-7483da8fc590ae555d48.json
+/cmake-build-debug/.cmake/api/v1/reply/target-auxclean-Debug-53730d2dc9f2a11b030c.json
+/cmake-build-debug/.cmake/api/v1/reply/target-developers-Debug-1dc95bc3772f2a712926.json
+/cmake-build-debug/.cmake/api/v1/reply/target-developers_auxclean-Debug-6318f37f4122e0f0403a.json
+/cmake-build-debug/.cmake/api/v1/reply/target-developers_dvi-Debug-5b7e43cac02c443ef545.json
+/cmake-build-debug/.cmake/api/v1/reply/target-developers_html-Debug-6b524a91a67459bf23f3.json
+/cmake-build-debug/.cmake/api/v1/reply/target-developers_pdf-Debug-c5da2e1cfda52f7e28ea.json
+/cmake-build-debug/.cmake/api/v1/reply/target-developers_ps-Debug-bcc59329277cbfb698fe.json
+/cmake-build-debug/.cmake/api/v1/reply/target-developers_safepdf-Debug-be7404a4e451a5502710.json
+/cmake-build-debug/.cmake/api/v1/reply/target-dvi-Debug-be556038e259596bec59.json
+/cmake-build-debug/.cmake/api/v1/reply/target-html-Debug-fc4f80bf914f90293f69.json
+/cmake-build-debug/.cmake/api/v1/reply/target-mycc-Debug-6fcbf68b266a6b9a626a.json
+/cmake-build-debug/.cmake/api/v1/reply/target-pdf-Debug-b49c0b6d7e01472969f4.json
+/cmake-build-debug/.cmake/api/v1/reply/target-ps-Debug-50b1686f4f2546cf94ca.json
+/cmake-build-debug/.cmake/api/v1/reply/target-safepdf-Debug-fab7d6e4078af6541f44.json
+/cmake-build-debug/.cmake/api/v1/query/toolchains-v1
+/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-8cb92e64865d3bca0ee1.json
+/.idea/vcs.xml
+/.idea/*
