--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,5 @@ SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 SET(SOURCE_FILES main.c)
 
-ADD_SUBDIRECTORY(Documentation)
+#ADD_SUBDIRECTORY(Documentation)
 ADD_SUBDIRECTORY(Source)
