--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,11 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
 
 PROJECT(COMS440)
 
-SET(CMAKE_C_STANDARD 99)
+SET(CMAKE_CXX_STANDARD 23)
 
 SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH};${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
-SET(SOURCE_FILES main.c)
+SET(SOURCE_FILES main.cpp)
 
-#ADD_SUBDIRECTORY(Documentation)
+# ADD_SUBDIRECTORY(Documentation)
 ADD_SUBDIRECTORY(Source)
