--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -1,1 +1,1 @@
-ADD_EXECUTABLE(mycc lexer.cpp lexer.h token.cpp token.h main.cpp)
+ADD_EXECUTABLE(mycc lexer.cpp lexer.h token.cpp token.h main.cpp parser.cpp parser.h)
